# bmftohex

./: CMakeLists.txt  bmfconvert.cpp  bmftohex.cpp
include/: bmfconvert.hpp
